--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -80,8 +80,12 @@
             <i class="fa fa-info"></i>
         </button>
     </div>
-    <div class="d-flex justify-content-end">
-        more info
+    <div class="d-flex justify-content-between">
+        <div>
+            <a href="" class="change_language" lang="tr"><img src="flags/turkey.png" alt="Turkish" width="24"></a>
+            <a href="" class="change_language" lang="en"><img src="flags/england.png" alt="English" width="24"></a>
+        </div>
+        <div>more info</div>
     </div>
     <hr class="my-2">
 
