--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -228,6 +228,8 @@
                 <option value="name.fullName">full name</option>
                 <option value="name.firstName">first name</option>
                 <option value="name.lastName">last name</option>
+                <option value="address.latitude">latitude</option>
+                <option value="address.longitude">longitude</option>
                 <option value="turkish_identity_number">Turkish Identity Number</option>
             </select>
         </td>
